--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,57 @@
+@import url('https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap');
+
+/* Variables */
+
+:root {
+  --font-main: 'Roboto', sans-serif;
+  --font-accent: 'Raleway', sans-serif;
+  --color-iris: #4d5ae5;
+  --color-ocean: #404bbf;
+  --color-navy: #2e2f42;
+  --color-slate: #434455;
+  --color-light-slate: #8e8f99;
+  --color-cornflower: #e7e9fc;
+  --color-cloud: #f4f4fd;
+  --color-white: #ffffff;
+  --color-green: #31d0aa;
+}
+
 /* ===== Footer subscribe form (GoIT макет) ===== */
 .footer-form {
   display: flex;
-  gap: 16px;
-  align-items: center;
+  gap: 24px;
+  align-items: flex-end;
+}
+.footer-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 0 1 220px;
+}
+
+.footer-form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 0;
+  padding: 0;
 }
 .footer-form-input {
-  flex: 1 1 0%;
-  padding: 8px 16px;
   border: 1px solid #fff;
-  border-radius: 4px;
-  font-size: 14px;
-  height: 40px;
-  background-color: #2e2f42;
-  color: #fff;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    background-color: transparent;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+  
+    padding-left: 16px;
 }
 .footer-form-input::placeholder {
   color: #fff;
@@ -60,24 +98,7 @@
   }
 }
 
-@import url('https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap');
 
-/* Variables */
-
-:root {
-  --font-main: 'Roboto', sans-serif;
-  --font-accent: 'Raleway', sans-serif;
-  --color-iris: #4d5ae5;
-  --color-ocean: #404bbf;
-  --color-navy: #2e2f42;
-  --color-slate: #434455;
-  --color-light-slate: #8e8f99;
-  --color-cornflower: #e7e9fc;
-  --color-cloud: #f4f4fd;
-  --color-white: #ffffff;
-  --color-green: #31d0aa;
-}
 
 svg {
   fill: currentColor;
@@ -551,7 +572,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .container-footer-container {
   display: flex;
   justify-content: space-between;
-    align-items: flex-start;
+  align-items: flex-start;
   gap: 0;
   max-width: 1158px;
   margin: 0 auto;
