--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /* ===== Custom subscribe section styles ===== */
+/* ===== Footer subscribe section styles ===== */
 .footer-subscribe-block {
   display: flex;
   flex-direction: column;
