--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,9 @@ color: #ffffff;
   display: flex;
   gap: 16px;
 }
+.logo-accent {
+  color: var(--color-cloud);
+}
 .footer-socials-item {
   list-style: none;
 }
