--- a/css/styles.css
+++ b/css/styles.css
@@ -802,23 +802,25 @@ color: #ffffff;
 }
 
 .modal-form-custom-checkbox {
-  width: 16px;
   height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 8px;
-  fill: transparent;
+    width: 16px;
+    margin-right: 8px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
 }
 
-/*.modal-form-checkbox:checked+.modal-form-checkbox-label .modal-form-custom-checkbox {
+.modal-form-checkbox:checked+.modal-form-checkbox-label .modal-form-custom-checkbox {
   background-color: var(--color-ocean);
   border: none;
   fill: var(--color-cloud);
-}*/
+}
 
 .modal-form-checkbox-icon {
   width: 10px;
