--- a/css/styles.css
+++ b/css/styles.css
@@ -808,7 +808,8 @@ color: #ffffff;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -824,6 +825,7 @@ color: #ffffff;
 .modal-form-checkbox-icon {
   width: 10px;
   height: 8px;
+  fill: transparent;
 }
 
 .modal-form-privacy-link {
