--- a/css/styles.css
+++ b/css/styles.css
@@ -703,7 +703,6 @@ color: #ffffff;
 
 
 .modal-form {
-  display: flex;
   flex-direction: column;
   gap: 8px;
 }
@@ -797,6 +796,7 @@ color: #ffffff;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--color-light-slate);
+  display: flex;
   align-items: center;
 }
 
@@ -818,13 +818,16 @@ color: #ffffff;
 .modal-form-checkbox:checked+.modal-form-checkbox-label .modal-form-custom-checkbox {
   background-color: var(--color-ocean);
   border: none;
-  fill: var(--color-cloud);
 }
 
 .modal-form-checkbox-icon {
-  width: 10px;
-  height: 8px;
-  fill: transparent;
+  width: 16px;
+  height: 16px;
+  opacity: 0;
+}
+
+.modal-form-checkbox:checked+.modal-form-checkbox-label .modal-form-checkbox-icon {
+  opacity: 1;
 }
 
 .modal-form-privacy-link {
