--- a/css/styles.css
+++ b/css/styles.css
@@ -796,7 +796,6 @@ color: #ffffff;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--color-light-slate);
-  display: flex;
   align-items: center;
 }
 
@@ -818,6 +817,7 @@ color: #ffffff;
 .modal-form-checkbox:checked+.modal-form-checkbox-label .modal-form-custom-checkbox {
   background-color: var(--color-ocean);
   border: none;
+  fill: var(--color-cloud);
 }
 
 .modal-form-checkbox-icon {
